--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,14 @@
 
 <body ng-app="app" ng-clock="">
 
-    <h1>Pi Scalextrix</h1>
+    <h1>Skrrt Skrrt Racing</h1>
     <ui-view></ui-view>
 
+	<audio autoplay>
+		<source src="RACING SOUND.wav" type="audio/wav">
+	</audio>
+		
+	
 </body>
 
 </html>
