--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
 <body ng-app="app" ng-clock="">
 
-    <h1>Skrrt Skrrt Racing</h1>
+    <h1>(Skrrt Skrrt Racing)</h1>
     <ui-view></ui-view>
 
 	<audio autoplay>
